Fixed Logo Squish Issue

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ text-align: center;
 }
 .img-logo{
 padding: 35px;
-height: 350px;
+max-height: 350px;
 }
 .img-product-logo {
 height: 250px;
@@ -68,6 +68,7 @@ background-color: transparent;
 padding: 18px 0;
 }
 }
+
 
 @media screen and (max-width: 1024px) { /* Specific to this particular image */
   img.bg {
